Implement documentation + remove unused classes