@@ -1,7 +1,7 @@
 package com.sereneoasis.level.world.biome.biomes.flatland.plains;
 
-import com.sereneoasis.level.world.biome.BiomeRepresentation;
 import com.sereneoasis.level.world.biome.BiomeLayers;
+import com.sereneoasis.level.world.biome.BiomeRepresentation;
 import com.sereneoasis.level.world.biome.biomefeatures.FloraBiome;
 import com.sereneoasis.level.world.biome.biomefeatures.FloraBiomeUtils;
 import com.sereneoasis.level.world.biome.biomefeatures.TreeBiome;
@@ -16,10 +16,10 @@ import java.util.List;
 public class Plains extends BiomeRepresentation implements TreeBiome, FloraBiome {
 
     private static final HashMap<BiomeLayers, List<Material>> layers = new HashMap<>() {{
-        put(BiomeLayers.SURFACE, Arrays.asList(Material.GRASS_BLOCK));
-        put(BiomeLayers.PRIMARY, Arrays.asList(Material.DIRT));
+        put(BiomeLayers.SURFACE, List.of(Material.GRASS_BLOCK));
+        put(BiomeLayers.PRIMARY, List.of(Material.DIRT));
         put(BiomeLayers.SECONDARY, Arrays.asList(Material.COAL_ORE, Material.IRON_ORE, Material.REDSTONE_ORE, Material.LAPIS_ORE, Material.GOLD_ORE, Material.DIAMOND_ORE));
-        put(BiomeLayers.BASE, Arrays.asList(Material.BEDROCK));
+        put(BiomeLayers.BASE, List.of(Material.BEDROCK));
     }};
     public Plains() {
         super(org.bukkit.block.Biome.PLAINS, "Plains", layers, 0.3, 0.4, 0, BiomeCategories.FLAT);
